fixes header and page content spacing issue

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -18,7 +18,7 @@
 }
 
 #mainContent {
-  margin-top: $nav-height;
+  padding-top: $nav-height;
 }
 
 #footerContent {
