--- a/src/pages/courses.module.scss
+++ b/src/pages/courses.module.scss
@@ -9,7 +9,6 @@ $breakpoints: (
 .courses {
   @extend .col;
   padding: 0;
-  position: relative;
 }
 
 .Hero {
